src/test/test-models/bad/for_loops/assign_to_loop_var5.stan
transformed data {
  while (1) {
    row_vector[2] vs;
    for (v in vs) {
      v = 3.2;
    }
  }
}
